# arc-kde-icon-theme

./: Makefile.am  README.md  index.theme
Arc-Kde/: index.theme
source/: PKGBUILD  README.md  build.sh  configure.ac
