AC_INIT(
    [arc-kde-icon-theme],
    [20190320],
    [https://github.com/afontenot/arc-kde-icon-theme/issues],
    [arc-kde-icon-theme],
    [https://github.com/afontenot/arc-kde-icon-theme]
)

AM_INIT_AUTOMAKE([no-dist-gzip dist-xz foreign])
AC_PREFIX_DEFAULT(/usr/local)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
